[package]
name = "signature-rm"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1.10.2"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
